--- a/week5/index.html
+++ b/week5/index.html
@@ -41,8 +41,39 @@
         <p>THIS IS SOME RANDOM TEXT <br> WHERE YOU GET ONSPIRED AND DO SOME COOL STUFF</p>
         <p>NO...WE ARE NOT LAZY,EVERY WEBSITE NEED BLANK SPACE</p>
     </section>
+    <section class="about">
+        <h1 >PORTFOLIO</h1>
+        <p>WHEN WE ARE BORED WE MAKE SOME OF THESE</p>
+    </section>
     <section>
-            PORTFOLIO
+        <ul class="imgz">
+            <li><img src="img/belka.png"></li>
+            <li><img src="img/belka2.jpg"></li>
+            <li><img src="img/belka2.jpg"></li>
+            <li><img src="img/belka3.jpg"></li>
+            <li><img src="img/belka.png"></li>
+            <li><img src="img/belka3.jpg"></li>
+            <li><img src="img/belka2.jpg"></li>
+            <li><img src="img/belka3.jpg"></li>
+        </ul>
+        <p class="pzelt">OH...WE HAVE MORE OF THESE</p>
+        <div class="vniz"><img src="img/Arrow.png"></div>
+    </section>
+    <section class="back2" >
+        <h1>CLIENTS</h1>
+        <p>SOMEBODY ACTUALLY PAY US FOR THESE STUFF</p>
+        <ul class="clients">
+            <li><img src="img/c1.png"> </li>
+            <li><img src="img/c2.png"> </li>
+            <li><img src="img/c3.png"> </li>
+            <li><img src="img/c4.png"> </li>
+            <li><img src="img/c5.png"> </li>
+            <li><img src="img/c6.png"> </li>
+        </ul>
+    </section>
+    <section>
+        <h1>CONTACT US</h1>
+        <p>SURE...WE CAN TAKE SOME TIME FOR CHAT</p>
     </section>
 </body>
 </html>
