Сделал отзывы и футер

--- a/week5/index.html
+++ b/week5/index.html
@@ -71,9 +71,26 @@
             <li><img src="img/c6.png"> </li>
         </ul>
     </section>
-    <section>
+    <section class="cont">
         <h1>CONTACT US</h1>
         <p>SURE...WE CAN TAKE SOME TIME FOR CHAT</p>
+        <div class="forma">
+            <input type="text" name="name" id="name" placeholder="Name" class="pole">
+            <input type="text" name="mail" id="mail" placeholder="Mail" class="pole">
+            <input type="text" name="subject" id="subject" placeholder="Subject"class="pole sub">
+            <input type="text" name="message" id="message" placeholder="Message"class="pole mes">
+            <button class="send">send</button>
+        </div>
     </section>
+    <footer>
+        <ul class="foot">
+            <li> © 2016 - YellowMoon</li>
+            <li><img src="img/Dribble.png"></li>
+            <li><img src="img/Dribble.png"></li>
+            <li><img src="img/Dribble.png"></li>
+            <li><img src="img/Dribble.png"></li>
+            <li><img src="img/Dribble.png"></li>
+        </ul>
+    </footer>
 </body>
 </html>
